# datus-semantic-adapter

./: .gitignore  .gitmodules  README.md  pyproject.toml
datus-semantic-osi/: pyproject.toml
datus-semantic-osi-engine/: README.md  pyproject.toml
datus-semantic-osi-engine/datus_semantic_osi_engine/: __init__.py  adapter.py  config.py  dialects.py  engine.py  errors.py
datus-semantic-osi-engine/tests/fixtures/: README.md
datus-semantic-osi-engine/tests/fixtures/orders/: model.yaml  seed.sql
datus-semantic-osi-engine/tests/integration/: conftest.py  test_end_to_end.py
datus-semantic-osi-engine/tests/unit/: _fakes.py  conftest.py  test_adapter.py  test_authoring.py  test_contract.py  test_errors.py  test_register.py
datus-semantic-osi/datus_semantic_osi/: __init__.py  adapter.py  authoring.py  authoring_spec.py  backend.py  cli.py  compiler.py  config.py  dialects.py  errors.py  from_sql.py  ir.py  metricflow_backend.py  migrate.py  native_backend.py  normalizer.py  profile.py  query_join.py  query_utils.py  query_window.py  spec_skeleton.py  validator.py  window_semantics.py
datus-semantic-osi/datus_semantic_osi/schema/: datus_extension.schema.json  osi-core-0.2.0.dev0.schema.json
datus-semantic-osi/docs/: USAGE.md
datus-semantic-osi/tests/golden/cumulative/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/cumulative/expected_metricflow/: metrics.yaml  semantic_models.yaml
datus-semantic-osi/tests/golden/derived/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/derived/expected_metricflow/: metrics.yaml
datus-semantic-osi/tests/golden/expression/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/expression/expected_metricflow/: metrics.yaml  semantic_models.yaml
datus-semantic-osi/tests/golden/filtered_dataset/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/filtered_dataset/expected_metricflow/: metrics.yaml  semantic_models.yaml
datus-semantic-osi/tests/golden/ratio/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/ratio/expected_metricflow/: metrics.yaml  semantic_models.yaml
datus-semantic-osi/tests/golden/simple/: expected_ir.json  input_osi.yaml
datus-semantic-osi/tests/golden/simple/expected_metricflow/: metrics.yaml  semantic_models.yaml
datus-semantic-osi/tests/integration/: test_adapter.py  test_advanced.py  test_golden.py  test_metric_kinds_metricflow.py  test_metricflow_acceptance.py  test_relationships.py
datus-semantic-osi/tests/unit/: test_authoring.py  test_backend.py  test_cli.py  test_compile_document.py  test_compiler_expression.py  test_compiler_ratio.py  test_custom_extensions.py  test_dialects.py  test_from_sql.py  test_ir.py  test_lowering.py  test_metric_kinds.py  test_migrate.py  test_native_backend.py  test_normalizer.py  test_profile_loader.py  test_register.py  test_spec_field_roles.py  test_time_bounds.py  test_validator.py
(+36 files in other folders)
