[project]
name = "datus-semantic-osi"
version = "0.1.0"
description = "OSI authoring + compiler + backend lowering for the Datus semantic layer"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "DatusAI", email = "support@datus.ai"}]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "sqlglot>=25.0.0",
    "jsonschema>=4.0.0",
    "datus-semantic-core>=0.2.0",
]

[project.optional-dependencies]
# MetricFlow execution backend. Pulls the heavy datus-metricflow stack; the
# OSI compiler / IR / lowering layers work without it.
metricflow = [
    "datus-semantic-metricflow>=0.2.8",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.entry-points."datus.semantic_adapters"]
osi = "datus_semantic_osi:register"

[tool.uv.sources]
datus-semantic-core = { workspace = true }
datus-semantic-metricflow = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datus_semantic_osi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
